Increased margin-top of game-body to 35px as the navigation bar was slightly overlapping the green buzzer (on medium - large screen sizes). The distance now avoids the overlapping and game-body is still well positioned on the screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 
 .game-body {
-  margin-top: 25px;
+  margin-top: 35px;
   align-items: center;
   display: inline-block;
   justify-content: center;
@@ -45,6 +45,7 @@ body, html {
 
 .navbar-default .navbar-toggle {
     border: 0;
+    background-color: transparent;
 }
 
 .navbar-default .navbar-toggle:hover {
